--- a/app/src/main/res/layout/item_team_list.xml
+++ b/app/src/main/res/layout/item_team_list.xml
@@ -2,17 +2,21 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="8dp"
+    android:foregroundGravity="center"
     android:padding="8dp"
     card_view:cardCornerRadius="16dp"
-    card_view:cardElevation="8dp">
+    card_view:cardElevation="8dp"
+    card_view:layout_gravity="center">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:foregroundGravity="center"
         android:padding="8dp">
 
         <ImageView
